<resources>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="english" translatable="false">English</string>
    <string name="context">Device Language</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="msgExit">Do you want to exit?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">ZoboonApp</string>

    <string name="app_name_ver">%1$s (%2$s)</string>


    <string name="hotlinesTitle">Hotlines</string>
    <string name="menusTitle">Menus</string>

    <string name="favoriteTitle">Favorites</string>
    <string name="offersTitle">Offers</string>


    <string name="demo_reload_photos">Load photos</string>
    <string name="demo_loading_photos">Loading photos…</string>
    <string name="demo_photo_by">by</string>
    <string name="settings">Settings</string>
    <string name="app_slogan">Save More with us</string>
    <string name="rate_app">Rate ZobonApp</string>
    <string name="share_app">Share</string>
    <plurals
        name="offerPages">
        <item quantity="one">One page</item>
        <item quantity="other">%d pages</item>
    </plurals>

    <string name="pageCount">Page %1$d of %2$d </string>
    <string name="pagePosition">Page %1$d </string>
    <string name="shareSubject">I liked ZoboonApp, have you tried it before?</string>
    <string name="shareText">Hi, I am using ZobonApp. I like this and I want you to check it out.  \n https://play.google.com/store/apps/details?id=%s</string>
    <string name="shareAppTitle">Share ZoboonApp</string>
    <string name="shareEntityTitle">Share %s Info</string>
    <string name="shareEntitySubject">%s Info</string>
    <string name="shareEntityText">%s Info \nHotline: %s \nWebsite: %s\nFacebook: http://www.facebook.com/%s\n\nAll Info provided by ZoboonApp.com</string>

    <string name="showShortcutCenterTitle">Show/Hide Shortcut Notifcation Bar</string>
    <string name="showShortcutCenterOn">Shortcuts center is visible</string>
    <string name="showShortcutCenterOff">Shortcuts center is hidden</string>

    <string name="showLargeDisplayTitle">Enable/Disable Large Display</string>
    <string name="showLargeDisplayOn">Large Size</string>
    <string name="showLargeDisplayOff">Normal Size</string>

    <string name="items">Items</string>
    <string name="categories">Categories</string>

    <plurals
        name="itemsCount">
        <item quantity="one">One item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="offersCount">
        <item quantity="one"> %s has one offer\n Check them in the offers pages</item>
        <item quantity="other"> %s has %d offers\n Check them in the offers pages</item>
    </plurals>
    <string name="newOffersNotification">New offers published, check the offers page</string>

    </resources>
