<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/mnuLangToggle"
        android:icon="@drawable/ic_language_black_24dp"
        android:menuCategory="container"
        android:orderInCategory="2"
        android:title="@string/arabic"
        app:showAsAction="always"/>
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/about"
        />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/help"
        />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="Share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
</menu>